@@ -329,6 +329,9 @@ New in spot 2.12  (2024-05-14)
   - The configure script failed to detect the include path for Python 3.12.
     (Issue #577.)
 
+  - Work around many failures caused by incorrect rounding of floating
+    point values in the counting of transitions.  (Issue #582)
+
   - Some incorrectly escaped strings in Python code were causing
     warnings with Python 3.12.
 
